# Day24-Track02-Lab-Assignment-ngoc-hieu

./: README.md
medviet-governance/: .vault_key  compliance_checklist.md  plan.md  pyproject.toml  shell.nix
medviet-governance/data/raw/: patients_raw.csv
medviet-governance/policies/: opa_policy.rego
medviet-governance/src/: data_generator.py
medviet-governance/src/access/: policy.csv  rbac.py
medviet-governance/src/api/: main.py
medviet-governance/src/encryption/: vault.py
medviet-governance/src/pii/: anonymizer.py  detector.py
medviet-governance/src/quality/: validation.py
medviet-governance/tests/: test_api.py  test_pii.py
