[project]
name = "medviet-governance"
version = "0.1.0"
description = "MedViet Governance"
requires-python = "==3.13"
dependencies = [
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "spacy>=3.5.0",
    "faker>=18.0.0",
    "pandas>=2.0.0",
    "casbin>=1.17.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "cryptography>=41.0.0",
    "great-expectations>=0.17.0",
    "pytest>=7.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.5.0",
    "python-multipart>=0.0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
